[project]
name = "head-orientation-node-for-comfyui---by-pablogfx"
description = "A custom node for ComfyUI that analyzes and sorts images based on head orientation using MediaPipe. It detects facial landmarks, calculates head pose, and intelligently sorts images for enhanced AI image processing workflows."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lazniak/Head-Orientation-Node-for-ComfyUI---by-PabloGFX"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Head-Orientation-Node-for-ComfyUI---by-PabloGFX"
Icon = ""
