[project]
name = "head-orientation-node"
description = "A custom node for ComfyUI that analyzes and sorts images based on head orientation using MediaPipe. It detects facial landmarks, calculates head pose, and intelligently sorts images for enhanced AI image processing workflows."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lazniak/Head-Orientation-Node-for-ComfyUI---by-PabloGFX"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pablogfx"
DisplayName = "Head-Orientation-Node - by PabloGFX"
Icon = ""
