[project]
name = "head-orientation-node"
description = "A custom node for ComfyUI that analyzes and sorts images based on head orientation using MediaPipe. It detects facial landmarks, calculates head pose, and intelligently sorts images for enhanced AI image processing workflows."
version = "1.0.11"
license = {file = "LICENSE"}
dependencies  = ["numpy>=1.19.3", "opencv-python>=4.5.5.64", "mediapipe>=0.8.9.1", "Pillow>=8.3.1", "torch>=1.9.0"] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/lazniak/Head-Orientation-Node-for-ComfyUI---by-PabloGFX"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pablogfx"
DisplayName = "Head-Orientation-Node - by PabloGFX"
Icon = ""
